# Langgraph-Multi-DeepResearcher

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  ai_trends.md  docker-compose-supervisory.yml  docker-compose.yml  docker-run-supervisory.bat  docker-run-supervisory.sh  docker-run.bat  docker-run.sh  env.example  out.md  pyproject.toml  research_report.md  supervisory_research_report.md  test_final.md  test_final3.md  test_html_cleaning.py  test_llm_response.py  test_pipeline.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
examples/: supervisory_example.py
src/Langgraph_deep_researcher/: __init__.py  __main__.py  configuration.py  graph.py  prompts.py  state.py  supervisory_architecture.py  supervisory_cli.py
src/ollama_deep_researcher/: __main__.py  configuration.py  graph.py  prompts.py  utils.py
